# Pomotimer

./: .bazelrc  .gitignore  Makefile  WORKSPACE  bazel-Pomotimer  bazel-bin  bazel-out  bazel-testlogs
App/: BUILD
App/Resources/Base.lproj/: Main.storyboard
App/Sources/: AppDelegate.swift
App/Tests/: PomotimerTests.swift
Carthage/: BUILD.bazel
Modules/App/: BUILD.bazel
Modules/App/Sources/: AppDelegate.swift
Modules/App/Tests/: PomotimerTests.swift
Modules/Carthage/: BUILD.bazel  Cartfile.private
Modules/SwiftLib/: BUILD  BUILD.bazel
Modules/SwiftLib/Tests/: DummyTests.swift
Modules/Timer/: BUILD  BUILD.bazel
Modules/Timer/Resources/: ViewController.xib
Modules/Timer/Sources/: AppCoordinator.swift  Scenes.swift  ViewController.swift  ViewControllerRoutes.swift
Modules/Timer/Tests/: DummyTests.swift
Pomotimer/: AppDelegate.swift  SceneDelegate.swift  ViewController.swift
Pomotimer.xcodeproj/: project.pbxproj
Pomotimer.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
PomotimerTests/: PomotimerTests.swift
PomotimerUITests/: PomotimerUITests.swift
Xcode/Pomotimer.tulsiproj/: project.tulsiconf
Xcode/Pomotimer.tulsiproj/Configs/: Default.tulsigen
config/Pomotimer.tulsiproj/: project.tulsiconf
config/Pomotimer.tulsiproj/Configs/: Default.tulsigen  Develop.tulsigen
config/PomotimerApp.tulsiproj/: project.tulsiconf
config/PomotimerApp.tulsiproj/Configs/: DefaultConfig.tulsigen
config/PomotimerTimerOnly.tulsiproj/: project.tulsiconf
config/TomatimerApp.tulsiproj/: project.tulsiconf
scripts/: setup  tulsigen
(+2 files in other folders)
