load("//config:custom_rules.bzl", "application")

licenses(["notice"])

application(
    name = "Pomotimer",
    infoplist = "Supporting Files/Info.plist",
    app_icons = [
        "//Modules/Resources:AppIcon",
    ],
    resources = [
        "//Modules/Resources:Assets",
    ],
    deps = [
        "//Modules/Timer:Timer",
    ],
)
